Beginning Construction of the Tracks
The tracks will be built by using OpenGL's libraries instead of models so
that we can easily distort the triangles and lines used.
A direction vector will be used that always points in the direction of the sample points.

--- a/VS2017/Assignment1.vcxproj
+++ b/VS2017/Assignment1.vcxproj
@@ -101,6 +101,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <None Include="..\Assets\Scenes\AnimatedScene.scene" />
+    <None Include="..\Assets\Scenes\BSplineScene.scene" />
     <None Include="..\Assets\Scenes\CoordinateSystem.scene" />
     <None Include="..\Assets\Scenes\StaticScene.scene" />
     <None Include="..\Assets\Shaders\BlueColor.fragmentshader" />
