Loading Screen Initialized
A loading screen class has been initialized when the program starts.

--- a/VS2017/Assignment1.vcxproj
+++ b/VS2017/Assignment1.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="..\Source\CubeModel.cpp" />
     <ClCompile Include="..\Source\EventManager.cpp" />
     <ClCompile Include="..\Source\FirstPersonCamera.cpp" />
+    <ClCompile Include="..\Source\LoadingScreen.cpp" />
     <ClCompile Include="..\Source\main.cpp" />
     <ClCompile Include="..\Source\Model.cpp" />
     <ClCompile Include="..\Source\Packages\imgui\imgui.cpp" />
@@ -147,6 +148,7 @@
     <ClInclude Include="..\Source\CubeModel.h" />
     <ClInclude Include="..\Source\EventManager.h" />
     <ClInclude Include="..\Source\FirstPersonCamera.h" />
+    <ClInclude Include="..\Source\LoadingScreen.h" />
     <ClInclude Include="..\Source\Model.h" />
     <ClInclude Include="..\Source\Packages\imgui\imconfig.h" />
     <ClInclude Include="..\Source\Packages\imgui\imgui.h" />
