--- a/VS2017/Assignment1.vcxproj
+++ b/VS2017/Assignment1.vcxproj
@@ -122,13 +122,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Source\Animation.cpp" />
+    <ClCompile Include="..\Source\AppInfoWindow.cpp" />
     <ClCompile Include="..\Source\BSpline.cpp" />
     <ClCompile Include="..\Source\BSplineCamera.cpp" />
     <ClCompile Include="..\Source\Camera.cpp" />
     <ClCompile Include="..\Source\CubeModel.cpp" />
     <ClCompile Include="..\Source\EventManager.cpp" />
     <ClCompile Include="..\Source\FirstPersonCamera.cpp" />
-    <ClCompile Include="..\Source\FPSWindow.cpp" />
     <ClCompile Include="..\Source\LoadingScreen.cpp" />
     <ClCompile Include="..\Source\main.cpp" />
     <ClCompile Include="..\Source\Mesh.cpp" />
@@ -148,13 +148,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Source\Animation.h" />
+    <ClInclude Include="..\Source\AppInfoWindow.h" />
     <ClInclude Include="..\Source\BSpline.h" />
     <ClInclude Include="..\Source\BSplineCamera.h" />
     <ClInclude Include="..\Source\Camera.h" />
     <ClInclude Include="..\Source\CubeModel.h" />
     <ClInclude Include="..\Source\EventManager.h" />
     <ClInclude Include="..\Source\FirstPersonCamera.h" />
-    <ClInclude Include="..\Source\FPSWindow.h" />
     <ClInclude Include="..\Source\LoadingScreen.h" />
     <ClInclude Include="..\Source\Mesh.h" />
     <ClInclude Include="..\Source\Model.h" />
