--- a/VS2017/Assignment1.vcxproj
+++ b/VS2017/Assignment1.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="..\Source\main.cpp" />
     <ClCompile Include="..\Source\Mesh.cpp" />
     <ClCompile Include="..\Source\Model.cpp" />
+    <ClCompile Include="..\Source\ObjectDescription.cpp" />
     <ClCompile Include="..\Source\Packages\imgui\imgui.cpp" />
     <ClCompile Include="..\Source\Packages\imgui\imgui_demo.cpp" />
     <ClCompile Include="..\Source\Packages\imgui\imgui_draw.cpp" />
@@ -159,6 +160,7 @@
     <ClInclude Include="..\Source\LoadingScreen.h" />
     <ClInclude Include="..\Source\Mesh.h" />
     <ClInclude Include="..\Source\Model.h" />
+    <ClInclude Include="..\Source\ObjectDescription.h" />
     <ClInclude Include="..\Source\Packages\imgui\imconfig.h" />
     <ClInclude Include="..\Source\Packages\imgui\imgui.h" />
     <ClInclude Include="..\Source\Packages\imgui\imgui_impl_glfw.h" />
