Force FirstPersonCamera to use Phong

--- a/VS2017/Assignment1.vcxproj
+++ b/VS2017/Assignment1.vcxproj
@@ -119,6 +119,8 @@
     <None Include="..\Assets\Shaders\SolidColor.vertexshader" />
     <None Include="..\Assets\Shaders\SplineTracks.fragmentshader" />
     <None Include="..\Assets\Shaders\SplineTracks.vertexshader" />
+    <None Include="..\Assets\Shaders\Stars.fragmentshader" />
+    <None Include="..\Assets\Shaders\Stars.vertexshader" />
     <None Include="..\Assets\Shaders\Texture.fragmentshader" />
     <None Include="..\Assets\Shaders\Texture.vertexshader" />
   </ItemGroup>
